import { AutoRollMiniStatus, Mode } from '../rpc/rpc';

export function GetFakeMiniStatuses(): AutoRollMiniStatus[] {
  return [
    {
      rollerId: 'afdo-chromium-autoroll',
      currentRollRev: '',
      lastRollRev: 'chromeos-chrome-amd64-86.0.4187.0_rc-r1-merged.afdo.bz2',
      numFailed: 0,
      numBehind: 0,
      childName: 'AFDO',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'angle-chromium-autoroll',
      currentRollRev: 'd2ca995f88ba56f2dcf165a10e737a673caa9655',
      lastRollRev: '2761f01d68a7578e1782e5c38fca5ec599f95a77',
      numFailed: 0,
      numBehind: 1,
      childName: 'ANGLE',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'angle-chromium-beta-autoroll',
      currentRollRev: '',
      lastRollRev: 'd188231d437ac82396e034f3483319ec1472f169',
      numFailed: 0,
      numBehind: 0,
      childName: 'ANGLE',
      mode: Mode.RUNNING,
      parentName: 'Chromium Beta Branch',
    },
    {
      rollerId: 'angle-chromium-stable-autoroll',
      currentRollRev: '',
      lastRollRev: 'a4b21cf26074967ff502a30ae2d52578ce649938',
      numFailed: 0,
      numBehind: 0,
      childName: 'ANGLE',
      mode: Mode.RUNNING,
      parentName: 'Chromium Stable Branch',
    },
    {
      rollerId: 'angle-skia-autoroll',
      currentRollRev: '',
      lastRollRev: '2761f01d68a7578e1782e5c38fca5ec599f95a77',
      numFailed: 0,
      numBehind: 1,
      childName: 'ANGLE',
      mode: Mode.RUNNING,
      parentName: 'Skia',
    },
    {
      rollerId: 'binaryen-emscripten-releases',
      currentRollRev: 'ca89a9f2f59e991ea1a3341bd4a567b043699eb8',
      lastRollRev: '0d5eca6cf4f61798d0854226d2c78d2655e07c30',
      numFailed: 0,
      numBehind: 1,
      childName: 'binaryen',
      mode: Mode.RUNNING,
      parentName: 'emscripten-releases',
    },
    {
      rollerId: 'catapult-autoroll',
      currentRollRev: '96ad35b01419478d19cdfa17520efebc94148401',
      lastRollRev: '9e100526c3df326e33a29c6e447a86de04f9a601',
      numFailed: 0,
      numBehind: 1,
      childName: 'Catapult',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'catapult-pdfium',
      currentRollRev: '',
      lastRollRev: 'a2a7e05eb765667ff785726b3ecd78d48f49dc88',
      numFailed: 0,
      numBehind: 12,
      childName: 'Catapult',
      mode: Mode.RUNNING,
      parentName: 'PDFium',
    },
    {
      rollerId: 'chromite-chromium-autoroll',
      currentRollRev: '',
      lastRollRev: '5f4e87cd92c2b306b515e935d9fcb3a8c36689ae',
      numFailed: 0,
      numBehind: 6,
      childName: 'Chromite',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'chromium-skia-autoroll',
      currentRollRev: '',
      lastRollRev: '13ebce234ed3ecaf0369d66f89c809144f645c38',
      numFailed: 0,
      numBehind: 68,
      childName: 'Chromium',
      mode: Mode.RUNNING,
      parentName: 'Skia',
    },
    {
      rollerId: 'chromiumos-config-infra-autoroll',
      currentRollRev: 'da11328f97d0f4b44cc834a369fd04ecf5db8bce',
      lastRollRev: '52a85773cfca0d50bcbbee32de40c0eb5162c252',
      numFailed: 10,
      numBehind: 14,
      childName: 'chromiumos/config',
      mode: Mode.RUNNING,
      parentName: 'infra',
    },
    {
      rollerId: 'code-coverage-pdfium',
      currentRollRev: '',
      lastRollRev: 'a70177d4a2e59031b801bd9777adfb728dac8983',
      numFailed: 0,
      numBehind: 0,
      childName: 'Code Coverage',
      mode: Mode.RUNNING,
      parentName: 'PDFium',
    },
    {
      rollerId: 'cros-afdo-airmont-chromium',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-amd64-airmont-85-4170.0-1592821839-benchmark-85.0.41813-r1-redacted.afdo.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Airmont AFDO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'cros-afdo-airmont-chromium-beta',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-amd64-airmont-84-4147.51-1592823077-benchmark-84.0.414773-r1-redacted.afdo.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Airmont AFDO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium Beta Branch',
    },
    {
      rollerId: 'cros-afdo-airmont-chromium-stable',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-amd64-airmont-83-4103.112-1592823658-benchmark-83.0.4103119-r1-redacted.afdo.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Airmont AFDO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium Stable Branch',
    },
    {
      rollerId: 'cros-afdo-broadwell-chromium',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-amd64-broadwell-85-4161.0-1592818623-benchmark-85.0.41813-r1-redacted.afdo.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Broadwell AFDO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'cros-afdo-broadwell-chromium-beta',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-amd64-broadwell-84-4147.51-1592819553-benchmark-84.0.414773-r1-redacted.afdo.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Broadwell AFDO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium Beta Branch',
    },
    {
      rollerId: 'cros-afdo-broadwell-chromium-stable',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-amd64-broadwell-83-4103.97-1592819197-benchmark-83.0.4103119-r1-redacted.afdo.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Broadwell AFDO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium Stable Branch',
    },
    {
      rollerId: 'cros-afdo-silvermont-chromium',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-amd64-silvermont-85-4170.0-1592820725-benchmark-85.0.41813-r1-redacted.afdo.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Silvermont AFDO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'cros-afdo-silvermont-chromium-beta',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-amd64-silvermont-84-4147.51-1592820349-benchmark-84.0.414773-r1-redacted.afdo.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Silvermont AFDO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium Beta Branch',
    },
    {
      rollerId: 'cros-afdo-silvermont-chromium-stable',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-amd64-silvermont-83-4103.112-1592819884-benchmark-83.0.4103119-r1-redacted.afdo.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Silvermont AFDO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium Stable Branch',
    },
    {
      rollerId: 'cros-orderfile-chromium',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-orderfile-field-85-4170.0-1592820725-benchmark-85.0.4181.3-r1orderfile.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Orderfiles',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'cros-orderfile-chromium-beta',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-orderfile-field-84-4147.51-1592820349-benchmark-84.0.414773-r1.orderfile.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Orderfiles',
      mode: Mode.RUNNING,
      parentName: 'Chromium Beta Branch',
    },
    {
      rollerId: 'cros-orderfile-chromium-stable',
      currentRollRev: '',
      lastRollRev:
        'chromeos-chrome-orderfile-field-83-4103.97-1592216557-benchmark-83.0.4103117-r1.orderfile.xz',
      numFailed: 0,
      numBehind: 0,
      childName: 'ChromeOS Orderfiles',
      mode: Mode.RUNNING,
      parentName: 'Chromium Stable Branch',
    },
    {
      rollerId: 'cros-proto-infra-autoroll',
      currentRollRev: '',
      lastRollRev: '437e15767f17f3407a83fc20b031115a693436bf',
      numFailed: 0,
      numBehind: 0,
      childName: 'chromiumos/infra/proto',
      mode: Mode.RUNNING,
      parentName: 'infra',
    },
    {
      rollerId: 'dart-sdk-flutter-engine',
      currentRollRev: '6d3928554c3fffc3f141158a517797b5435d91a2',
      lastRollRev: 'bec128612c03899856ecc729d41313fc2dfadf74',
      numFailed: 2,
      numBehind: 7,
      childName: 'Dart SDK',
      mode: Mode.RUNNING,
      parentName: 'Flutter Engine',
    },
    {
      rollerId: 'dawn-chromium-autoroll',
      currentRollRev: '2ffc55ab385d5a6e4bb4c6b261692842574d771e',
      lastRollRev: '268fe254ec50a72b28b03017c63044a8ecbe92ba',
      numFailed: 0,
      numBehind: 3,
      childName: 'Dawn',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'dawn-skia-autoroll',
      currentRollRev: '',
      lastRollRev: 'b231c7fb717d13dc5b15f4ab34527cff198fd17b',
      numFailed: 2,
      numBehind: 14,
      childName: 'dawn',
      mode: Mode.RUNNING,
      parentName: 'Skia',
    },
    {
      rollerId: 'depot-tools-chromium-autoroll',
      currentRollRev: '',
      lastRollRev: '95099f475463caa66801dd1b22ee851fe8bc05be',
      numFailed: 0,
      numBehind: 0,
      childName: 'Depot Tools',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'devtools-frontend-chromium',
      currentRollRev: 'e22dad5763e9dcd18514c67f8c30499eafa18b19',
      lastRollRev: 'ae6540492fcb2e586e469742d7f62da448f1fb8d',
      numFailed: 1,
      numBehind: 10,
      childName: 'DevTools Frontend',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'devtools-frontend-chromium-beta',
      currentRollRev: '',
      lastRollRev: '930c3d2ed8d25469f889f8a101f86f8c4c65d458',
      numFailed: 0,
      numBehind: 0,
      childName: 'DevTools Frontend',
      mode: Mode.RUNNING,
      parentName: 'Chromium Beta Branch',
    },
    {
      rollerId: 'devtools-frontend-chromium-stable',
      currentRollRev: '',
      lastRollRev: 'cd325ed4f23cb3683298e00ba68dc26dd2251d88',
      numFailed: 0,
      numBehind: 0,
      childName: 'DevTools Frontend',
      mode: Mode.RUNNING,
      parentName: 'Chromium Stable Branch',
    },
    {
      rollerId: 'emscripten-emscripten-releases',
      currentRollRev: '',
      lastRollRev: '2bee818f21ff1687f28a4186795c10509cea784c',
      numFailed: 0,
      numBehind: 0,
      childName: 'emscripten',
      mode: Mode.RUNNING,
      parentName: 'emscripten-releases',
    },
    {
      rollerId: 'flutter-engine-flutter-autoroll',
      currentRollRev: '88a8e9db18063e7ed5df0022fbdf404fa6c4eaeb',
      lastRollRev: '712f619737f1323fd2908b397aa8bd64fb2ccbe5',
      numFailed: 1,
      numBehind: 9,
      childName: 'Engine',
      mode: Mode.RUNNING,
      parentName: 'Flutter',
    },
    {
      rollerId: 'freetype-chromium',
      currentRollRev: '',
      lastRollRev: 'a4434747558d872c55e55ce428019a8e15d222dc',
      numFailed: 0,
      numBehind: 0,
      childName: 'FreeType',
      mode: Mode.DRY_RUN,
      parentName: 'Chromium',
    },
    {
      rollerId: 'fuchsia-aemu-chromium-autoroll',
      currentRollRev: 'NwKjfDOL_ugbEGGNcm2u6NzakaOJ9ad36bFd7bUVpXIC',
      lastRollRev: 'OQ8c-S6dNd0LdVeElhAYBgsHeiiM4xyJ8E6hy3pRIUMC',
      numFailed: 0,
      numBehind: 1,
      childName: 'Fuchsia AEMU',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'fuchsia-linux-sdk-flutter-engine',
      currentRollRev: '',
      lastRollRev: 'Pcug7zRTKlqgjBgqjN72-JF6DHyVYuoKqbKc0JgzxWIC',
      numFailed: 0,
      numBehind: 0,
      childName: 'Fuchsia Linux SDK',
      mode: Mode.RUNNING,
      parentName: 'Flutter',
    },
    {
      rollerId: 'fuchsia-linux-toolchain-flutter-engine',
      currentRollRev: '',
      lastRollRev: 'OT6p30bQQhyCzRSy7xPsSbZ88J3PWOnneenkMZ0j7kIC',
      numFailed: 0,
      numBehind: 0,
      childName: 'Fuchsia Linux Toolchain',
      mode: Mode.RUNNING,
      parentName: 'Flutter',
    },
    {
      rollerId: 'fuchsia-mac-sdk-flutter-engine',
      currentRollRev: '',
      lastRollRev: 'avEUlBH4tSg60Urqb4dy1zJfa-FABhU1FrHnWOtIVVYC',
      numFailed: 0,
      numBehind: 1,
      childName: 'Fuchsia Mac SDK',
      mode: Mode.RUNNING,
      parentName: 'Flutter',
    },
    {
      rollerId: 'fuchsia-mac-toolchain-flutter-engine',
      currentRollRev: '',
      lastRollRev: 'OzTZOKkICT0yD82Dbx0jvVn5hN5eOSi6ByVTDseE7i0C',
      numFailed: 0,
      numBehind: 0,
      childName: 'Fuchsia Mac Toolchain',
      mode: Mode.RUNNING,
      parentName: 'Flutter',
    },
    {
      rollerId: 'fuchsia-sdk-chromium-autoroll',
      currentRollRev: '0.20200701.0.1',
      lastRollRev: '0.20200630.3.1',
      numFailed: 0,
      numBehind: 1,
      childName: 'Fuchsia SDK',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'glslang-angle-autoroll',
      currentRollRev: '',
      lastRollRev: 'dca47063ccd29e5cea8e88dc38a6369d4c2e5c11',
      numFailed: 1,
      numBehind: 7,
      childName: 'glslang',
      mode: Mode.RUNNING,
      parentName: 'ANGLE',
    },
    {
      rollerId: 'glslang-chromium-autoroll',
      currentRollRev: 'b112fac0033c92810ce6c477b2fe36011d184ee0',
      lastRollRev: '8d3f3b7dac48a131eea5c474a152202a7272fb5d',
      numFailed: 0,
      numBehind: 2,
      childName: 'glslang',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'googletest-chromium-autoroll',
      currentRollRev: 'aee0f9d9b5b87796ee8a0ab26b7587ec30e8858e',
      lastRollRev: '4fe018038f87675c083d0cfb6a6b57c274fb1753',
      numFailed: 5,
      numBehind: 14,
      childName: 'GoogleTest',
      mode: Mode.DRY_RUN,
      parentName: 'Chromium',
    },
    {
      rollerId: 'jinja2-pdfium',
      currentRollRev: '',
      lastRollRev: '3f90fa05c85718505e28c9c3426c1ba52843b9b7',
      numFailed: 0,
      numBehind: 0,
      childName: 'Jinja2',
      mode: Mode.RUNNING,
      parentName: 'PDFium',
    },
    {
      rollerId: 'llvm-project-emscripten-releases',
      currentRollRev: '',
      lastRollRev: '41ca82cbe815904173d094cb3a7789a705a73695',
      numFailed: 0,
      numBehind: 8,
      childName: 'llvm-project',
      mode: Mode.RUNNING,
      parentName: 'emscripten-releases',
    },
    {
      rollerId: 'lottie-android-lottie-ci-autoroll',
      currentRollRev: '',
      lastRollRev: '617334ba6fe3dd2581d34459ab5f1449ffd9d831',
      numFailed: 0,
      numBehind: 0,
      childName: 'Lottie Android',
      mode: Mode.RUNNING,
      parentName: 'Lottie CI',
    },
    {
      rollerId: 'lottie-web-lottie-ci-autoroll',
      currentRollRev: '',
      lastRollRev: '5bb5e521e47f7a6036ae991fb6166f56870d1beb',
      numFailed: 0,
      numBehind: 0,
      childName: 'Lottie Web',
      mode: Mode.RUNNING,
      parentName: 'Lottie CI',
    },
    {
      rollerId: 'luci-go-infra-autoroll',
      currentRollRev: '',
      lastRollRev: '726bfc2468df94f1cdad4c252d4001a45f9439ad',
      numFailed: 0,
      numBehind: 0,
      childName: 'luci-go',
      mode: Mode.RUNNING,
      parentName: 'infra',
    },
    {
      rollerId: 'luci-py-infra-autoroll',
      currentRollRev: '',
      lastRollRev: '51099bf46ec966e38c3e504e5e7a224d759f02c5',
      numFailed: 0,
      numBehind: 0,
      childName: 'luci-py',
      mode: Mode.RUNNING,
      parentName: 'infra',
    },
    {
      rollerId: 'markupsafe-pdfium',
      currentRollRev: '',
      lastRollRev: '8f45f5cfa0009d2a70589bcda0349b8cb2b72783',
      numFailed: 0,
      numBehind: 0,
      childName: 'MarkupSafe',
      mode: Mode.RUNNING,
      parentName: 'PDFium',
    },
    {
      rollerId: 'material-font-disk-loader-ios-chromium',
      currentRollRev: '',
      lastRollRev: '93acc021e3034898716028822cb802a3a816be7e',
      numFailed: 1,
      numBehind: 1,
      childName: 'material-font-disk-loader-ios',
      mode: Mode.STOPPED,
      parentName: 'Chromium',
    },
    {
      rollerId: 'material-i18n-ios-chromium',
      currentRollRev: '',
      lastRollRev: 'd8f32464ac97d5551c8db19de916170ae87cfa90',
      numFailed: 0,
      numBehind: 0,
      childName: 'material-internationalization-ios',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'material-roboto-font-loader-ios-chromium',
      currentRollRev: '',
      lastRollRev: '4aa51e906e5671c71d24e991f1f10d782a58409f',
      numFailed: 2,
      numBehind: 4,
      childName: 'material-roboto-font-loader-ios',
      mode: Mode.STOPPED,
      parentName: 'Chromium',
    },
    {
      rollerId: 'material-sprited-ani-view-ios-chromium',
      currentRollRev: '',
      lastRollRev: '8af9adaa182044cf2920dfb620b863669e1aeb7c',
      numFailed: 0,
      numBehind: 0,
      childName: 'material-sprited-animation-view-ios',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'material-text-accessibility-ios-chromium',
      currentRollRev: '',
      lastRollRev: '499b45d1895b565096302a209c0c728df03b95d4',
      numFailed: 0,
      numBehind: 0,
      childName: 'material-text-accessibility-ios',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'motion-animator-objc-chromium',
      currentRollRev: '',
      lastRollRev: '0581bc3dfacd34e40381e9cf45a15070b3868ba7',
      numFailed: 0,
      numBehind: 0,
      childName: 'motion-animator-objc',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'motion-interchange-objc-chromium',
      currentRollRev: '',
      lastRollRev: '8e25f1ca599543dc77e4016b588763dcba6cbac8',
      numFailed: 0,
      numBehind: 0,
      childName: 'motion-interchange-objc',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'motion-transitioning-objc-chromium',
      currentRollRev: '',
      lastRollRev: '5bb0d577dd78472536480496ace115bc593ed0e1',
      numFailed: 0,
      numBehind: 0,
      childName: 'motion-transitioning-objc',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'nacl-autoroll',
      currentRollRev: '',
      lastRollRev: 'fd20fafa8ec19700e12daa031bf792bae8b6bb21',
      numFailed: 1,
      numBehind: 0,
      childName: 'NaCl',
      mode: Mode.STOPPED,
      parentName: 'Chromium',
    },
    {
      rollerId: 'openscreen-chromium',
      currentRollRev: '',
      lastRollRev: 'c9336155e045ed13f13b75b4bf8d3684f3f89573',
      numFailed: 0,
      numBehind: 0,
      childName: 'Open Screen',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'pdfium-autoroll',
      currentRollRev: '',
      lastRollRev: 'afd27509974add1b4e4a962be0a30583b1735dfe',
      numFailed: 0,
      numBehind: 2,
      childName: 'PDFium',
      mode: Mode.STOPPED,
      parentName: 'Chromium',
    },
    {
      rollerId: 'pdfium-chromium-beta',
      currentRollRev: '',
      lastRollRev: 'bee2261eab794536f236013fa8c9d01728ed326b',
      numFailed: 0,
      numBehind: 0,
      childName: 'PDFium',
      mode: Mode.RUNNING,
      parentName: 'Chromium Beta Branch',
    },
    {
      rollerId: 'pdfium-chromium-stable',
      currentRollRev: '',
      lastRollRev: 'daabea6ba6c09f72e956e826b132f1d1b77acb9b',
      numFailed: 0,
      numBehind: 0,
      childName: 'PDFium',
      mode: Mode.RUNNING,
      parentName: 'Chromium Stable Branch',
    },
    {
      rollerId: 'perfetto-chromium-autoroll',
      currentRollRev: 'a962afa04fee08bdf31f22031ae50d443f03b7ad',
      lastRollRev: '47c3c7a55be5a9640d444b1e7826c469796675a5',
      numFailed: 0,
      numBehind: 4,
      childName: 'Perfetto',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'perfetto-trace-processor-linux-chromium',
      currentRollRev: '',
      lastRollRev:
        'perfetto_binaries/trace_processor_shell/linux47c3c7a55be5a9640d444b1e7826c469796675a5/trace_processor_shell',
      numFailed: 0,
      numBehind: 0,
      childName: 'Perfetto Trace Processor Linux',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'perfetto-trace-processor-mac-chromium',
      currentRollRev: '',
      lastRollRev:
        'perfetto_binaries/trace_processor_shell/mac15131138169a31c1332e7e13914c370e2e5c816e/trace_processor_shell',
      numFailed: 0,
      numBehind: 0,
      childName: 'Perfetto Trace Processor Mac',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'perfetto-trace-processor-win-chromium',
      currentRollRev: '',
      lastRollRev:
        'perfetto_binaries/trace_processor_shell/win47c3c7a55be5a9640d444b1e7826c469796675a5/trace_processor_shell.exe',
      numFailed: 0,
      numBehind: 0,
      childName: 'Perfetto Trace Processor Win',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'pgo-mac-chromium',
      currentRollRev:
        'chrome-mac-master-1593582825-995d8e78b6c8ff09ef0a8c1c9fd4830db0669287.profdata',
      lastRollRev: 'chrome-mac-master-1593561487-f93d00b844fcb3a1b3a03cdb0ab1966b81282397.profdata',
      numFailed: 0,
      numBehind: 2,
      childName: 'Chrome Mac PGO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium master branch',
    },
    {
      rollerId: 'pgo-mac-chromium-beta',
      currentRollRev: '',
      lastRollRev: 'chrome-mac-4147-1590507938-4068f0fc133424a023d4dd8ed3d45ba11cc79dc8.profdata',
      numFailed: 0,
      numBehind: 67,
      childName: 'Chrome Mac PGO profile',
      mode: Mode.STOPPED,
      parentName: 'Chromium beta branch',
    },
    {
      rollerId: 'pgo-win32-chromium',
      currentRollRev:
        'chrome-win32-master-1593579595-41b97eeea78dc3dd5933ae86ef98a1dfcf4a47b5.profdata',
      lastRollRev:
        'chrome-win32-master-1592964003-9ddbb03b2a49f9cdb1031f0ca4d2168e3c19b2de.profdata',
      numFailed: 9,
      numBehind: 30,
      childName: 'Chrome Win32 PGO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium master branch',
    },
    {
      rollerId: 'pgo-win32-chromium-beta',
      currentRollRev: '',
      lastRollRev: 'chrome-win32-4147-1589956987-e649980210d29d0154d23124ef0dc054ae5123ce.profdata',
      numFailed: 10,
      numBehind: 54,
      childName: 'Chrome Win32 PGO profile',
      mode: Mode.STOPPED,
      parentName: 'Chromium beta branch',
    },
    {
      rollerId: 'pgo-win64-chromium',
      currentRollRev:
        'chrome-win64-master-1593539505-cfe66a1bbbde44f7bb54335b0509e9000170ecf3.profdata',
      lastRollRev:
        'chrome-win64-master-1593496775-0ea9a3b4c746de291f2e1d9684ad233ef06add08.profdata',
      numFailed: 1,
      numBehind: 2,
      childName: 'Chrome Win64 PGO profile',
      mode: Mode.RUNNING,
      parentName: 'Chromium master branch',
    },
    {
      rollerId: 'pgo-win64-chromium-beta',
      currentRollRev: '',
      lastRollRev: 'chrome-win64-4147-1590479906-291af69463e19a8b478aca46aa1f76a6402f5638.profdata',
      numFailed: 0,
      numBehind: 31,
      childName: 'Chrome Win64 PGO profile',
      mode: Mode.STOPPED,
      parentName: 'Chromium beta branch',
    },
    {
      rollerId: 'shaderc-chromium-autoroll',
      currentRollRev: 'f4025c1cd5c2146595d2c04d85de1f1b296431e7',
      lastRollRev: '43c639f0906aa7ba019391dbe1a744330e513856',
      numFailed: 0,
      numBehind: 1,
      childName: 'shaderc',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'skcms-skia-autoroll',
      currentRollRev: '',
      lastRollRev: '403d32176ebc0f057e3ee7cb05c16fe209f61b7e',
      numFailed: 0,
      numBehind: 0,
      childName: 'skcms',
      mode: Mode.RUNNING,
      parentName: 'Skia',
    },
    {
      rollerId: 'skia-autoroll',
      currentRollRev: '16ee98ddeda3b67218277c529bd18858e73c59f5',
      lastRollRev: '5638f489af56f34d849c31c1a492c044b656fb8f',
      numFailed: 0,
      numBehind: 3,
      childName: 'Skia',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'skia-flutter-autoroll',
      currentRollRev: '',
      lastRollRev: '16ee98ddeda3b67218277c529bd18858e73c59f5',
      numFailed: 0,
      numBehind: 0,
      childName: 'Skia',
      mode: Mode.RUNNING,
      parentName: 'Flutter',
    },
    {
      rollerId: 'skia-lottie-ci-autoroll',
      currentRollRev: '',
      lastRollRev: '16ee98ddeda3b67218277c529bd18858e73c59f5',
      numFailed: 0,
      numBehind: 0,
      childName: 'Skia',
      mode: Mode.RUNNING,
      parentName: 'Lottie CI',
    },
    {
      rollerId: 'skia-skiabot-test-autoroll',
      currentRollRev: '',
      lastRollRev: '16ee98ddeda3b67218277c529bd18858e73c59f5',
      numFailed: 0,
      numBehind: 0,
      childName: 'Skia',
      mode: Mode.RUNNING,
      parentName: 'Skiabot Test',
    },
    {
      rollerId: 'spirv-tools-angle-autoroll',
      currentRollRev: 'fba90d6b0a23ae2331273aedabc569a3816750ac',
      lastRollRev: 'fc0dc3a9c734f798f85a8433cbd99306dbe82825',
      numFailed: 0,
      numBehind: 2,
      childName: 'SPIRV-Tools',
      mode: Mode.RUNNING,
      parentName: 'ANGLE',
    },
    {
      rollerId: 'spirv-tools-chromium-autoroll',
      currentRollRev: 'fba90d6b0a23ae2331273aedabc569a3816750ac',
      lastRollRev: 'fc0dc3a9c734f798f85a8433cbd99306dbe82825',
      numFailed: 0,
      numBehind: 2,
      childName: 'SPIRV-Tools',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'swiftshader-angle-autoroll',
      currentRollRev: '2d6b37bbda59247a1f24209ff549ffbf8174e338',
      lastRollRev: 'b3240d0c355a21dc79e851ce74f49db9406604d5',
      numFailed: 0,
      numBehind: 2,
      childName: 'SwiftShader',
      mode: Mode.RUNNING,
      parentName: 'ANGLE',
    },
    {
      rollerId: 'swiftshader-chromium-autoroll',
      currentRollRev: '',
      lastRollRev: '2d6b37bbda59247a1f24209ff549ffbf8174e338',
      numFailed: 0,
      numBehind: 0,
      childName: 'SwiftShader',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'swiftshader-skia-autoroll',
      currentRollRev: '',
      lastRollRev: '2d6b37bbda59247a1f24209ff549ffbf8174e338',
      numFailed: 0,
      numBehind: 0,
      childName: 'SwiftShader',
      mode: Mode.RUNNING,
      parentName: 'Skia',
    },
    {
      rollerId: 'v8-chromium-beta-autoroll',
      currentRollRev: '',
      lastRollRev: '141284ce828b13c08e0eccbf359fcce42e655a43',
      numFailed: 0,
      numBehind: 0,
      childName: 'V8',
      mode: Mode.RUNNING,
      parentName: 'Chromium Beta Branch',
    },
    {
      rollerId: 'v8-chromium-stable-autoroll',
      currentRollRev: '',
      lastRollRev: '90904eb48b16b32f7edbf1f8a92ece561d05e738',
      numFailed: 0,
      numBehind: 0,
      childName: 'V8',
      mode: Mode.RUNNING,
      parentName: 'Chromium Stable Branch',
    },
    {
      rollerId: 'vk-gl-cts-angle-autoroll',
      currentRollRev: '',
      lastRollRev: '2e189d3854dbba9ce51c4ec87c7c099e562d714c',
      numFailed: 0,
      numBehind: 0,
      childName: 'VK-GL-CTS',
      mode: Mode.RUNNING,
      parentName: 'ANGLE',
    },
    {
      rollerId: 'vulkan-headers-angle-autoroll',
      currentRollRev: '',
      lastRollRev: '8188e3fbbc105591064093440f88081fb957d4f0',
      numFailed: 0,
      numBehind: 0,
      childName: 'Vulkan-Headers',
      mode: Mode.RUNNING,
      parentName: 'ANGLE',
    },
    {
      rollerId: 'vulkan-loader-angle-autoroll',
      currentRollRev: '',
      lastRollRev: 'a173c025f8fea41d5d5e6bbd78c84647ce67fd21',
      numFailed: 0,
      numBehind: 0,
      childName: 'Vulkan-Loader',
      mode: Mode.RUNNING,
      parentName: 'ANGLE',
    },
    {
      rollerId: 'vulkan-tools-angle-autoroll',
      currentRollRev: '',
      lastRollRev: 'abc9dff824c3f612a53e4fd3c484579fa80d27a5',
      numFailed: 0,
      numBehind: 0,
      childName: 'Vulkan-Tools',
      mode: Mode.RUNNING,
      parentName: 'ANGLE',
    },
    {
      rollerId: 'vulkan-validation-layers-angle-autoroll',
      currentRollRev: '7ff733fd65d733c06f96656500ec1d1c6e1f5d07',
      lastRollRev: '7c1434b8ea355fbdaae03e4f31f5146e73cdc134',
      numFailed: 1,
      numBehind: 6,
      childName: 'Vulkan-ValidationLayers',
      mode: Mode.RUNNING,
      parentName: 'ANGLE',
    },
    {
      rollerId: 'waterfall-emscripten-releases',
      currentRollRev: '',
      lastRollRev: '182947a46f010552aa3427341549e8ccb5e10ee0',
      numFailed: 0,
      numBehind: 0,
      childName: 'waterfall',
      mode: Mode.RUNNING,
      parentName: 'emscripten-releases',
    },
    {
      rollerId: 'webrtc-chromium-autoroll',
      currentRollRev: 'f279d7c8f91387c26954bdd05a32f680a4a95140',
      lastRollRev: '3cb0985983c10b725a5ff5b6a83ea7e694be3856',
      numFailed: 2,
      numBehind: 8,
      childName: 'WebRTC',
      mode: Mode.RUNNING,
      parentName: 'Chromium',
    },
    {
      rollerId: 'webrtc-chromium-beta-autoroll',
      currentRollRev: '',
      lastRollRev: '758c388d3fedac4a474b48a240af83dd3f6a5fc5',
      numFailed: 0,
      numBehind: 0,
      childName: 'WebRTC',
      mode: Mode.RUNNING,
      parentName: 'Chromium Beta Branch',
    },
    {
      rollerId: 'webrtc-chromium-stable-autoroll',
      currentRollRev: '',
      lastRollRev: '3ed9687558f4fd0271adf5836d4a029df858dc43',
      numFailed: 0,
      numBehind: 0,
      childName: 'WebRTC',
      mode: Mode.RUNNING,
      parentName: 'Chromium Stable Branch',
    },
  ];
}
